Update Digit Recognition using CNN in Keras.ipynb

--- a/Digit Recognition using CNN in Keras.ipynb
+++ b/Digit Recognition using CNN in Keras.ipynb
@@ -1089,7 +1089,7 @@
    "source": [
     "\n",
     "\n",
-    "** you found this notebook helpful or you just liked it , some upvotes would be very much appreciated - That will keep me motivated :)**\n"
+    "** Thank You for reading :)**\n"
    ]
   }
  ],
